--- a/DS/DS.CSS
+++ b/DS/DS.CSS
@@ -70,13 +70,28 @@ h2 {
 }
 
 .weather-charts {
-    display: flex;
-    justify-content: space-between;
     margin-top: 20px;
 }
 
-.weather-charts img {
-    max-width: 48%;
+.center {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+.left {
+    text-align: left;
+}
+
+#pressure-chart {
+    margin-top: 20px;
+    text-align: center;
+}
+
+#pressure-chart img {
+    width: 100%;
+    max-width: 800px;
+    height: auto;
     border-radius: 4px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
 }
