--- a/flask/static/styles.css
+++ b/flask/static/styles.css
@@ -1,64 +1,138 @@
+@import url(https://fonts.googleapis.com/earlyaccess/cwtexyen.css);
+
 body {
-    font-family: Arial, sans-serif;
-    background-color: #f4f4f4;
+    line-height: 2;
+    font-family: 'cwTeXYen', sans-serif;
+    background-color: #cee9ef;
     margin: 0;
     padding: 0;
-}
 
-.container {
-    max-width: 800px;
-    margin: 0 auto;
-    padding: 20px;
-    background-color: #fff;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-    border-radius: 8px;
+    
+}
+.header {
+    background-color: #005caa;
+    height: 30px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 h1 {
+    font-size: 65px;
     text-align: center;
-    color: #333;
+    color: #fff1d9;
+    text-shadow: -1px 0px 1px #005caa, 1px 0px 1px #005caa,
+    0px -1px 1px #005caa, 0px 1px 1px #005caa;
+    margin: 0;
+    font-weight: 700;
 }
 
-.section {
-    margin: 20px 0;
-    padding: 10px;  
-    border-top: 2px solid #ddd;
+h4 {
+    font-size: 40px;
+    color: #005caa;
+    margin: 0;
+    font-weight: 700;
+}
+h6{
+    font-size: 20px;
+    color: #005caa;
+    margin: 5px 0;
 }
 
 h2 {
-    color: #555;
+    color: #005caa;
+    font-size: 35px;
+    font-weight: bolder;
+    text-align: left;
+    width: 100%;
+    margin: 0;
+}
+
+h3 {
+    font-size: 30px;
+    color: #005caa;
+    font-weight: bolder;
+    margin: 5px 0;
+}
+h4 {
+    font-size: 20px;
+    color: #005caa;
+    font-weight: bolder;
+    margin: 5px 0;
+}
+h5{
+    font-size: 50px;
+    color: #005caa;
+    font-weight: bolder;
+    margin: 5px 0;
 }
 
 .input-group {
-    display: flex;
+    grid-area: input-group;
     justify-content: center;
-    margin-bottom: 20px;
+    font-size: 20px;
 }
 
 .input-group input {
-    flex: 1;
-    padding: 10px;
+    font-size: 20px;
+    width: 300px;
+    height: 1px;
+    padding: 40px;
     border: 1px solid #ddd;
-    border-radius: 4px;
+    border-radius: 10px;
+    box-shadow: -5px 10px 5px rgba(0, 0, 0, 0.1), 5px 10px 5px rgba(0, 0, 0, 0.1);
+}
+
+.checkbox {
+    display: none;
+}
+
+.slider {
+    width: 70px;
+    height: 25px;
+    background-color: #fff1d9;
+    border-radius: 40px;
+    overflow: hidden;
+    display: flex;
+    align-items: center;
+    border: 4px solid transparent;
+    transition: background-color 0.3s ease, transform 0.3s ease;
+    box-shadow: 0 0 10px 0 #13383e;
+    cursor: pointer;
+    position: relative;
     margin-right: 10px;
 }
 
-.button {
-    padding: 10px 20px;
-    border: none;
-    background-color: #007bff;
-    color: #fff;
-    cursor: pointer;
-    border-radius: 4px;
-    transition: background-color 0.3s ease;
+.slider::before {
+    content: '';
+    display: block;
+    width: 25px;
+    height: 25px;
+    background-color: #fff;
+    transform: translateX(0);
+    border-radius: 50%;
+    transition: transform 0.3s ease, box-shadow 0.3s ease;
+    position: absolute;
+    left: 0;
 }
 
-.button:hover {
-    background-color: #0056b3;
+.checkbox:checked + .slider::before {
+    transform: translateX(45px);
 }
 
-.weather-info {
-    margin-top: 20px;
+.checkbox:checked + .slider {
+    background-color: #005caa;
+}
+
+.checkbox:active + .slider::before {
+    transform: translateX(0);
+}
+
+.switch {
+    display: flex;
+    align-items: center;
+    margin-top: 10px;
+    margin-bottom: 10px;
 }
 
 .weather-info h3 {
@@ -66,11 +140,13 @@ h2 {
 }
 
 .weather-info p {
-    color: #555;
+    font-size: 50px;
+    font-weight: bolder;
+    color: #86a9d1;
 }
 
 .weather-charts {
-    margin-top: 20px;
+    grid-area: weather-charts;
 }
 
 .center {
@@ -79,19 +155,160 @@ h2 {
     margin-right: auto;
 }
 
-.left {
-    text-align: left;
-}
-
 #pressure-chart {
     margin-top: 20px;
     text-align: center;
 }
 
 #pressure-chart img {
-    width: 100%;
-    max-width: 800px;
+    width: 80%;
+    max-width: 600px;
     height: auto;
     border-radius: 4px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+}
+
+.button {
+    padding: 34px 20px;
+    border: none;
+    background-color: #005caa;
+    font-size: 15px;
+    box-shadow: -5px 10px 5px rgba(0, 0, 0, 0.1), 5px 10px 5px rgba(0, 0, 0, 0.1);
+    color: #fff;
+    cursor: pointer;
+    border-radius: 4px;
+    transition: background-color 0.3s ease;
+}
+
+.button:hover {
+    background-color: #023460;
+}
+
+.container {
+    background-color: #fff1d9;
+    border-radius: 35px;
+    padding: 20px;
+    margin: auto;
+    width: 1200px;
+    display: grid;
+    grid-template-columns: 1fr 1fr 2fr 2fr;
+    grid-template-rows: 105px 125px 125px 260px;
+    row-gap: 5px;
+    column-gap: 5px;
+    grid-template-areas: 
+    "left-top left-top search search"
+    "left-top left-top weather-info1 weather-info2"
+    "left-bottom1 left-bottom2 weather-info3 weather-info4"
+    "left-bottom1 left-bottom2 weather-charts weather-charts";
+}
+
+.left-top {
+    padding: 20px;
+    border-radius: 10px;
+    grid-area: left-top;
+    background-color: #cee9ef;
+    box-shadow: -5px 10px 5px rgba(0, 0, 0, 0.1), 5px 10px 5px rgba(0, 0, 0, 0.1);
+    margin: 10px;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    height: 150px;
+    justify-content: flex-start;
+}
+
+.control-panel {
+    display: flex;
+    align-items: center;
+    margin-top: 5px;
+    width: 100%;
+}
+
+.temperature-humidity {
+    display: flex;
+    flex-direction: column;
+    margin-left: 50px;
+}
+
+.left-bottom1 {
+    padding: 20px;
+    border-radius: 10px;
+    grid-area: left-bottom1;
+    background-color: #cee9ef;
+    box-shadow: -5px 10px 5px rgba(0, 0, 0, 0.1), 5px 10px 5px rgba(0, 0, 0, 0.1);
+    margin: 10px;
+}
+
+.left-bottom2 {
+    padding: 20px;
+    border-radius: 10px;
+    grid-area: left-bottom2;
+    background-color: #cee9ef;
+    box-shadow: -5px 10px 5px rgba(0, 0, 0, 0.1), 5px 10px 5px rgba(0, 0, 0, 0.1);
+    margin: 10px;
+}
+
+.weather-info1 {
+    display: flex; /* 启用 flexbox 布局 */
+    flex-direction: row; /* 以列方式排列项目 */
+    align-items: center;
+    text-align: center;
+    padding: 20px;
+    border-radius: 10px;
+    grid-area: weather-info1;
+    background-color: #cee9ef;
+    box-shadow: -5px 10px 5px rgba(0, 0, 0, 0.1), 5px 10px 5px rgba(0, 0, 0, 0.1);
+    margin: 10px;
+}
+
+.weather-info2 {
+    display: flex; /* 启用 flexbox 布局 */
+    flex-direction: row; /* 以列方式排列项目 */
+    align-items: center;
+    text-align: center;
+    padding: 20px;
+    border-radius: 10px;
+    grid-area: weather-info2;
+    background-color: #cee9ef;
+    box-shadow: -5px 10px 5px rgba(0, 0, 0, 0.1), 5px 10px 5px rgba(0, 0, 0, 0.1);
+    margin: 10px;
+}
+
+.weather-info3 {
+    display: flex; /* 启用 flexbox 布局 */
+    flex-direction: row; /* 以列方式排列项目 */
+    align-items: center;
+    text-align: center;
+    padding: 20px;
+    border-radius: 10px;
+    grid-area: weather-info3;
+    background-color: #cee9ef;
+    box-shadow: -5px 10px 5px rgba(0, 0, 0, 0.1), 5px 10px 5px rgba(0, 0, 0, 0.1);
+    margin: 10px;
+}
+
+.weather-info4 {
+    display: flex; /* 启用 flexbox 布局 */
+    flex-direction: row; /* 以列方式排列项目 */
+    align-items: center;
+    text-align: center;
+
+    padding: 20px;
+    border-radius: 10px;
+    grid-area: weather-info4;
+    background-color: #cee9ef;
+    box-shadow: -5px 10px 5px rgba(0, 0, 0, 0.1), 5px 10px 5px rgba(0, 0, 0, 0.1);
+    margin: 10px;
+}
+
+.search {
+    grid-area: search;
+}
+
+#chat-box {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    margin: 50px;
+    text-align: center;
 }
